# api_docs/api-spec.yml
@@ -2,7 +2,7 @@ openapi: 3.0.0
 
 info:
   description: Documento de la API de Unicast
-  version: 1.1.5
+  version: 1.2.0
   title: Swagger Unicast
 
 servers:
@@ -40,6 +40,8 @@ tags:
     description: Operaciones sobre las visualizaciones de videos (historial)
   - name: vote
     description: Operaciones sobre los votos
+  - name: message
+    description: Operaciones sobre los mensajes
 
 components:
   securitySchemes:
@@ -87,6 +89,42 @@ components:
           type: string
       description: Parámetros en la forma `($propertyname,)+[asc|desc]?`
 
+    DisplayProjectionParameter:
+      name: projection
+      in: query
+      description: Incluir si se quiere obtener tambien los videos en la respuesta
+      schema:
+        type: string
+        default: displayWithVideo
+        enum: [displayWithVideo]
+
+    SubjectProjectionParameter:
+      name: projection
+      in: query
+      description: Incluir si se quiere obtener tambien la universidad en la respuesta
+      schema:
+        type: string
+        default: subjectWithUniversity
+        enum: [subjectWithUniversity]
+
+    VideoProjectionParameter:
+      name: projection
+      in: query
+      description: Incluir si se quiere obtener tambien la universidad y/o la asignatura en la respuesta
+      schema:
+        type: string
+        default: videoWithSubject
+        enum: [videoWithSubject, videoWithSubjectAndUniversity, videoWithUniversity]
+
+    CommentProjectionParameter:
+      name: projection
+      in: query
+      description: Incluir si se quiere obtener tambien el usuario que ha hecho el comentario
+      schema:
+        type: string
+        default: commentWithUser
+        enum: [commentWithUser]
+
   schemas:
     Token:
       type: object
@@ -124,6 +162,10 @@ components:
         seconds:
           type: integer
           format: int64
+        university:
+          $ref: 'api-spec.yml#/components/schemas/University'
+        subject:
+          $ref: 'api-spec.yml#/components/schemas/Subject'
         # comments:
         # votes:
         # tags:
@@ -450,7 +492,33 @@ components:
         - $ref: '#/components/schemas/GetResponse'
         - $ref: '#/components/schemas/VoteGetEmbedded'
 
+    Message:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        text:
+          type: string
+        timestamp:
+          type: string
+          format: date-time
 
+    MessageGetEmbedded:
+      type: object
+      properties:
+        _embedded:
+          type: object
+          properties:
+            messages:
+              type: array
+              items:
+                $ref: '#/components/schemas/Message'
+
+    MessageGetResponse:
+      allOf:
+        - $ref: '#/components/schemas/GetResponse'
+        - $ref: '#/components/schemas/MessageGetEmbedded'
 
 paths:
 
@@ -512,6 +580,10 @@ paths:
   /subjects/search/nameContaining:
     $ref: 'subject_endpoints.yml#/SubjectsSearchNameContaining'
 
+  /subjects/search/name:
+    $ref: 'subject_endpoints.yml#/SubjectsSearchName'
+
+
   #Degree endpoints
 
   /degrees:
@@ -528,6 +600,9 @@ paths:
 
   /degrees/search/nameContaining:
     $ref: 'degree_endpoints.yml#/DegreeSearchNameContaining'
+
+  /degrees/search/name:
+    $ref: 'degree_endpoints.yml#/DegreeSearchName'
 
   #University endpoints
 
@@ -575,6 +650,9 @@ paths:
   /videos/{id}:
     $ref: 'video_endpoints.yml#/VideoId'
 
+  /videos/search/userSubjects:
+    $ref: 'video_endpoints.yml#/UserSubjects'
+
 
   #Comment endpoints
 
@@ -602,3 +680,8 @@ paths:
 
   /votes:
     $ref: 'vote_endpoints.yml#/Votes'
+
+  #Messages endpoints
+
+  /messages:
+    $ref: 'messages_endpoints.yml#/Messages'
