# src/main/java/com/unicast/unicast_backend/controllers/MessageController.java
@@ -1,0 +1,86 @@
+package com.unicast.unicast_backend.controllers;
+
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.sql.Timestamp;
+import java.time.Instant;
+
+import com.unicast.unicast_backend.assemblers.MessageResourceAssembler;
+import com.unicast.unicast_backend.persistance.model.Message;
+import com.unicast.unicast_backend.persistance.model.User;
+import com.unicast.unicast_backend.persistance.repository.MessageRepository;
+import com.unicast.unicast_backend.persistance.repository.UserRepository;
+import com.unicast.unicast_backend.principal.UserDetailsImpl;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.web.PagedResourcesAssembler;
+import org.springframework.hateoas.PagedResources;
+import org.springframework.hateoas.Resource;
+import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+public class MessageController {
+
+    private final MessageRepository messageRepository;
+
+    private final MessageResourceAssembler messageAssembler;
+
+    private final UserRepository userRepository;
+
+    private final PagedResourcesAssembler<Message> pagedAssembler;
+
+    @Autowired
+    public MessageController(MessageRepository u, UserRepository a, MessageResourceAssembler messageAssembler,
+            PagedResourcesAssembler<Message> pagedAssembler) {
+        this.messageRepository = u;
+        this.userRepository = a;
+        this.messageAssembler = messageAssembler;
+        this.pagedAssembler = pagedAssembler;
+    }
+
+    @PostMapping(value = "/api/messages", produces = "application/json", consumes = "multipart/form-data")
+    public ResponseEntity<?> addMessage(@AuthenticationPrincipal UserDetailsImpl userAuth,
+            @RequestParam("text") String text, @RequestParam("receiver_id") Long receiverId) throws URISyntaxException {
+        User user = userAuth.getUser();
+
+        Message message = new Message();
+
+        User receiver = userRepository.findById(receiverId).get();
+
+        // TODO: comprobar que receiver sea un profesor de una de las asignaturas del
+        // usuario
+
+        message.setTimestamp(Timestamp.from(Instant.now()));
+        message.setText(text);
+        message.setReceiver(receiver);
+        message.setSender(user);
+
+        messageRepository.save(message);
+
+        Resource<Message> messageResource = messageAssembler.toResource(message);
+
+        return ResponseEntity.created(new URI(message.getId().toString())).body(messageResource);
+    }
+
+    @GetMapping(value = "/api/messages", produces = "application/json")
+    public ResponseEntity<?> getMessageFromSender(@AuthenticationPrincipal UserDetailsImpl userAuth,
+            @RequestParam("sender_id") Long senderId, Pageable page) throws URISyntaxException {
+        User user = userAuth.getUser();
+
+        User sender = userRepository.findById(senderId).get();
+
+        Page<Message> messagesPage = messageRepository.findByReceiverAndSender(user, sender, page);
+
+        PagedResources<Resource<Message>> messagesResource = pagedAssembler.toResource(messagesPage);
+
+        return ResponseEntity.ok(messagesResource);
+    }
+
+}
